tests/language_modules/16_control_flow_edges/valid/while_zero_iteration_edge.vf
module Control.WhileZero

procedure main()
is
    let amount: Integer = 0
    while amount > 0
        invariant amount >= 0
        variant amount
    do
        amount := amount - 1
    end while
    check amount = 0
end main

end Control.WhileZero