tests/language_modules/16_control_flow_edges/invalid_semantics/while_body_local_not_visible_after.vf
module Control.WhileScope

procedure main()
is
    let amount: Integer = 0
    while amount < 1
        invariant amount >= 0
        variant 1 - amount
    do
        let loop_total: Integer = amount
        amount := amount + 1
    end while
    check loop_total = 0
end main

end Control.WhileScope